fix z-index

--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -229,11 +229,7 @@ my code
     .custom-form-box-active {
         @apply bg-primary border-primary text-white;
     }
-
-    [data-vaul-overlay]{
-        @apply z-[101];
-    }
-
+    
     /* ---------------------
     bg 
     --------------------- */
